--- a/Website/Past.html
+++ b/Website/Past.html
@@ -20,7 +20,7 @@
 
 <h1><center>Pop From The Past</h1>
 
-<h2><center>Before acknowledging the present and future pop music scene, its important to recognize the music and artists who have paved the way for the current pop music genre. Listen below is arguable the most renowned album, top hits, and artist for pop music from the last two decades.</h2>
+<h2><center>Before acknowledging the present and future pop music scene, it's important to recognize the music and artists who have paved the way for the current pop music genre. Listed below is arguable the most renowned album, top hits, and artist for pop music from the last two decades.</h2>
 
 
 <h3>Top Album:</h3>
@@ -29,7 +29,8 @@
 			<img src="maxresdefault.jpg" width="500" height="300p">
 			<br>
       <br>
-			<div> In 2010 Katy Perry released her near perfect second studio album Teenage Dream and it has easily remained one of the best collective pop albums since. The album had five number one singles and it is considered to be the "Thriller" of the 2010s. Perry’s fun, explosive, bops like Teenage Dream, California Girls, Firework, Last Friday Night, and E.T. have a made a lasting legacy on the singer and established her as a truly icon pop music artist. All in all, this pop album is quite literally a dream.
+			<div> In 2010 Katy Perry released her near perfect second studio album
+        "Teenage Dream" and it has easily remained one of the best collective pop albums since. The album had five number one singles and it is considered to be the "Thriller" of the 2010s. Perry’s fun explosive bops like "Teenage Dream", "California Girls", "Firework", "Last Friday Night (T.G.I.F.)", and "E.T." have made a lasting legacy on the singer and established her as a true pop music icon. All in all, this pop album is quite literally a dream.
 				<br>
 
 		</span>
@@ -37,10 +38,23 @@
 
 <h3>Hit Songs:</h3>
 
-      <h4> "Tik Tok", "Your Love Is My Drug", and "Take it Off"
-			<img src="220px-TiK_ToK_-_Kesha_(official_single_cover).JPG" alt="Ke$ha Tik Tok" height="400" width="400" align="right">
-      <img src="MV5BYTJjN2YwYmMtOWQ0MS00NGE2LTgyZDctMGEzNDZlZmZlNDQ1XkEyXkFqcGdeQXVyNDQ5MDYzMTk@._V1_.jpg" alt=Your Love is my drug
-			<br>
-			<br>
-			<span class="caption">
-			\
+      <h4>"Tik Tok", "Your Love Is My Drug", and "Take it Off" - Ke$ha</h4>
+            <img src="Screen Shot 2020-03-25 at 11.45.16 PM.png" width="800" height="300">
+            <br>
+            <br>
+            <div> This glitter-throwing punk pop star has release some of the most insane party starter songs to this day with her smash hit singles: "Tik Tok", "Take it Off", and "Your Love is my Drug". “Ke Dollar Sign Ha” unapologetically released fearless pop anthems that celebrated living it up and having a good time. “Tik Tok” has remained my personal anthem and is a reminder of how iconic the early 2010s truly were.
+              <br>
+          </span>
+        </div>
+
+  <h3>Top Artist:</h3>
+
+      <h4>Britney Spears</h4>
+
+            <img src="1200x600.jpeg" width="600" height="300">
+            <br>
+            <br>
+            <div> “It’s Britney B*tch”. What an Inservice it would be for me to not include one of the ultimate female trailblazers that shaped the pop music industry. Though not always serving the live vocals, Britney has proven from her early pop music days that she is a force to be reckoned with. Aside from the classics like, “Oops!...I Did It Again”, …Baby One More Time”, (You Drive Me) Crazy”, and “Toxic”, Britney is a Pop Queen, and during her prime everyone was constantly yelling, “Gimme More”.
+              <br>
+            </span>
+          </div>
