--- a/Website/Present.html
+++ b/Website/Present.html
@@ -14,5 +14,46 @@
   </head>
   <body a link="black" vlink= "black">
 
-        <link rel="stylesheet" href="styles1.css"/>
-    <center><h1>The World of Pop Music</h1>
+    <link rel="stylesheet" href="stylesPresent.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai+2:500&display=swap" rel="stylesheet">
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+
+  <h1><center>The Current Pop Music Scene</h1>
+
+  <h2><center>Here we are in 2020, and pop music has taken a huge shift. Darker more alternative music has become mainstream that blends both catchy choruses, dance beats, and powerful electronic synths. Here is some of the most popular pop music today, and the a artists who are dominating the charts:</h2>
+
+    <h3>Top Album:</h3>
+
+        <h4>WHEN WE ALL FALL ASLEEP, WHERE DO WE GO? - Billie Eilish</h4>
+
+              <img src="MP3_Billie-Eilish-WHEN-WE-ALL-FALL-ASLEEP-WHERE-DO-WE-GO__iTunes_Plus_AAC_M4A.jpg" width="500" height="300">
+              <br>
+              <br>
+              <div>This 17-year-old is changing the game. Opposite to many other young aspiring musicians, Billie has managed to find her place in the music industry in her own times. Her album that she co-wrote and recorded with her brother in their parents’ house, scored five Grammys this year. Billie swept all major four categories at the award ceremony for her dark, honest, and masterfully made second debut album.
+                <br>
+              </span>
+            </div>
+
+<h3>Top Songs:</h3>
+
+        <h4>"Say So", "Got To Town", and "Candy" - Doja Cat</h4>
+
+              <img src="Screen Shot 2020-03-26 at 1.40.13 AM.jpg.png" width="800" height="300">
+              <br>
+              <br>
+              <div>This is a hot take, I will admit, but anyone who has listened to “Say So” recently can attest that it is a disco dream. This perfect blend of dance and pop has skyrocketed Doja Cat to the top of charts while also highlighting some of her other iconic older hits like “Go To Town” and “Candy”. At a time when most of the songs on the radio are darker, Doja throws some neon pink into the world and tells people that there’s “No Punches Left to roll with“ in her psychedelic and contemporary pop music.
+
+                <br>
+              </span>
+            </div>
+<h3>Top Artist:</h3>
+
+        <h4>Ariana Grande</h4>
+
+              <img src="fb08817dd7ba8dcaaa83d03ff2583e0401441510.jpg" width="600" height="300">
+              <br>
+              <br>
+              <div>This power vocalist has gone through some immense trauma in front of the public eye, but has battled through the hardships and came out souring releasing not one but two albums in the past two years. Ariana Grande’s raw vocal ability proves her to be one of the best live singers in the industry sitting next to those like Celine Dion and Mariah Carey. Should she release another album soon? Probably not. Girl, take a break. Nevertheless, her fans are always hungry for more, and she's bound to serve with whatever music she puts out into the world.
+                <br>
+              </span>
+            </div>
