--- a/Website/Past.html
+++ b/Website/Past.html
@@ -1,60 +1,51 @@
-<!--Navigation Bar goes here-->
-
-<div class="topnav">
-  <a href="index.html">Home</a>
-  <a class="active"<b>Past</b>
-  <a href="Present.html">Present</a>
-  <a href="Future.html">Future</a>
-</div>
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>The World of Pop Music - Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai+2:500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylesPPF.css"/>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
   </head>
   <body a link="black" vlink= "black">
 
-        <link rel="stylesheet" href="stylespast.css"/>
-        <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai+2:500&display=swap" rel="stylesheet">
-        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+                <!--Navigation Bar goes here-->
 
-<h1><center>Pop From The Past</h1>
+            <div class="topnav">
+              <a href="index.html">Home</a>
+              <a class="active"<b>Past</b>
+              <a href="Present.html">Present</a>
+              <a href="Future.html">Future</a>
+              <a href="AboutMe.html">About Me</a>
+            </div>
 
-<h2><center>Before acknowledging the present and future pop music scene, it's important to recognize the music and artists who have paved the way for the current pop music genre. Listed below is arguable the most renowned album, top hits, and artist for pop music from the last two decades.</h2>
+      <div class="header"><center>Pop From The Past<center></div>
+      <div class="introparagraph"><center>Before acknowledging the present and future pop music scene, it's important to recognize the music and artists who have paved the way for the current pop music genre. Listed below is arguable the most renowned album, top hits, and artist for pop music from the last two decades.<center></div>
 
-
-<h3>Top Album:</h3>
-
-			<h4>Teenage Dream -Katy Perry</h4>
-			<img src="maxresdefault.jpg" width="500" height="300p">
-			<br>
+    <h2>Top Album:</h2>
+			<div class="name">Teenage Dream -Katy Perry</div>
       <br>
-			<div> In 2010 Katy Perry released her near perfect second studio album
-        "Teenage Dream" and it has easily remained one of the best collective pop albums since. The album had five number one singles and it is considered to be the "Thriller" of the 2010s. Perry’s fun explosive bops like "Teenage Dream", "California Girls", "Firework", "Last Friday Night (T.G.I.F.)", and "E.T." have made a lasting legacy on the singer and established her as a true pop music icon. All in all, this pop album is quite literally a dream.
-				<br>
+      <div class="photo1">
+			     <img src="maxresdefault.jpg" width="500" height="300p"></div>
+			<br>
+			<center><p>In 2010 Katy Perry released her near perfect second studio album "Teenage Dream" and it has easily remained one of the best collective pop albums since. The album had five number one singles and it is considered to be the "Thriller" of the 2010s. Perry’s fun explosive bops like "Teenage Dream", "California Girls", "Firework", "Last Friday Night (T.G.I.F.)", and "E.T." have made a lasting legacy on the singer and established her as a true pop music icon. All in all, this pop album is quite literally a dream.</p></center>
 
-		</span>
-		</div>
+    <h2>Hit Songs:</h2>
+      <div class="name">"Tik Tok", "Your Love Is My Drug", and "Take it Off" - Ke$ha</div>
+      <br>
+      <div class="photo2">
+      <img src="Screen Shot 2020-03-25 at 11.45.16 PM.png" width="800" height="300"></div>
+      <br>
+      <center><p> This glitter-throwing punk pop star has release some of the most insane party starter songs to this day with her smash hit singles: "Tik Tok", "Take it Off", and "Your Love is my Drug". “Ke Dollar Sign Ha” unapologetically released fearless pop anthems that celebrated living it up and having a good time. “Tik Tok” has remained my personal anthem and is a reminder of how iconic the early 2010s truly were.</p></center>
+        <br>
 
-<h3>Hit Songs:</h3>
+      <h2>Top Artist:</h2>
+      <div class="name">Britney Spears</div>
+      <br>
+      <div class="photo3">
+      <img src="1200x600.jpeg" width="600" height="300"></div>
+      <br>
+      <center><p>“It’s Britney B*tch”. What an Inservice it would be for me to not include one of the ultimate female trailblazers that shaped the pop music industry today. Though not always serving the live vocals, Britney has proven from her early pop music days that she is a force to be reckoned with. Aside from the classics like, “Oops!...I Did It Again”, "…Baby One More Time”, "(You Drive Me) Crazy”, and “Toxic”, Britney is a Pop Queen, and during her prime everyone was constantly yelling, “Gimme More”.</p></center>
+      <br>
 
-      <h4>"Tik Tok", "Your Love Is My Drug", and "Take it Off" - Ke$ha</h4>
-            <img src="Screen Shot 2020-03-25 at 11.45.16 PM.png" width="800" height="300">
-            <br>
-            <br>
-            <div> This glitter-throwing punk pop star has release some of the most insane party starter songs to this day with her smash hit singles: "Tik Tok", "Take it Off", and "Your Love is my Drug". “Ke Dollar Sign Ha” unapologetically released fearless pop anthems that celebrated living it up and having a good time. “Tik Tok” has remained my personal anthem and is a reminder of how iconic the early 2010s truly were.
-              <br>
-          </span>
-        </div>
-
-  <h3>Top Artist:</h3>
-
-      <h4>Britney Spears</h4>
-
-            <img src="1200x600.jpeg" width="600" height="300">
-            <br>
-            <br>
-            <div> “It’s Britney B*tch”. What an Inservice it would be for me to not include one of the ultimate female trailblazers that shaped the pop music industry. Though not always serving the live vocals, Britney has proven from her early pop music days that she is a force to be reckoned with. Aside from the classics like, “Oops!...I Did It Again”, …Baby One More Time”, (You Drive Me) Crazy”, and “Toxic”, Britney is a Pop Queen, and during her prime everyone was constantly yelling, “Gimme More”.
-              <br>
-            </span>
-          </div>
+  </body>
+</html>
