--- a/Website/index.html
+++ b/Website/index.html
@@ -1,35 +1,27 @@
-<!--Navigation Bar goes here-->
-
-<div class="topnav">
-  <a href="active" <b>Home</b>
-  <a href="Past.html">Past</a>
-  <a href="Present.html">Present</a>
-  <a href="Future.html">Future</a>
-</div>
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>The World of Pop Music - Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai+2:500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles1.css"/>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   </head>
   <body a link="black" vlink= "black">
 
-        <link rel="stylesheet" href="styles1.css"/>
-        <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai+2:500&display=swap" rel="stylesheet">
-        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <center><h1>The World of Pop Music</h1>
+<!--Navigation Bar goes here-->
+
+        <div class="topnav">
+          <a class="active"<b>Home<b/>
+          <a href="Past.html">Past</a>
+          <a href="Present.html">Present</a>
+          <a href="Future.html">Future</a>
+          <a href="AboutMe.html">About Me</a>
+        </div>
+        <h1>The World of Pop Music</h1>
 
 <!--Big pop culture picture-->
 
-<html>
-<body>
+      <img src="IMG_2592.jpg" alt="Popculturecollage" width="500" height="333"><center>
+      <br>
 
-<img src="IMG_2592.jpg" alt="Popculturecollage" width="500" height="333">
-
-
-<br>
-</body>
-</html>
-
-
-<center><p>Welcome to my website on the wonderful world of pop music. Many people think that pop music is nothing more than mediocre music that teenage middle schoolers listen to, but really it is so much more than that. Pop music is complex and reaches audiences from all around the globe. It's perfect blend of dance beats and iconic catchy lyrics has allowed it to shape the way radio stations operate today. A lot goes into making the perfect pop music bop and artists are constantly competing with one another for the number one spot on the charts. In this website I hope to take you through a journey of the former pop classic hits of the past, the current pop music that is trending, and the future of pop music that is shaping tomorrow’s music.</p>
+<center><p>Welcome to my website on the wonderful world of pop music. Many people think that pop music is nothing more than mediocre music that teenage middle schoolers listen to, but really it is so much more than that! Pop music is complex and reaches audiences from all around the globe. It's perfect blend of dance beats and iconic catchy lyrics has allowed it to shape the way radio stations operate today. A lot goes into making the perfect pop music bop and artists are constantly competing with one another for the number one spot on the charts. In this website I hope to take you through a journey of the former pop classic hits of the past, the current pop music that is trending, and the future of pop music that is shaping tomorrow’s music.</p>
