--- a/Website/Future.html
+++ b/Website/Future.html
@@ -1,60 +1,51 @@
-<!--Navigation Bar goes here-->
-
-<div class="topnav">
-  <a href="index.html">Home</a>
-  <a href="Past.html">Past</a>
-  <a href="Present.html">Present</a>
-  <a href="active">Future</a>
-</div>
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>The World of Pop Music - Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai+2:500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylesPPF.css"/>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   </head>
   <body a link="black" vlink= "black">
 
-  <link rel="stylesheet" href="stylesFuture.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai+2:500&display=swap"
-  rel="stylesheet">
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+        <!--Navigation Bar goes here-->
 
-<h1><center>The Future of Pop Music</h1>
+        <div class="topnav">
+          <a href="index.html">Home</a>
+          <a href="Past.html"<a>Past</a>
+          <a href="Present.html">Present</a>
+          <a class="active"<b>Future</b>
+          <a href="AboutMe.html">About Me</a>
+        </div>
 
-<h2><center>No one quite knows what pop music will sound like in the future, but I have identified a few artists who I feel are going to change the scene of pop music.</h2>
+      <div class="header"><center>The Future of Pop Music<center></div>
+      <div class="introparagraph"><center>No one quite knows what pop music will sound like in the future, but I have identified a few artists who I feel are going to change the scene of pop music.</center></div>
 
-<h3>Top Album:</h3>
 
-      <h4>Chromatica - Lady Gaga</h4>
+      <h2>Top Album:</h2>
+      <div class="name">Chromatica - Lady Gaga</div>
+      <br>
+      <div class="photo1">
+      <img src="Lady-Gaga-Stupid-Love.jpg" width="500" height="300"></div>
+      <br>
+      <center><p>It has been four long years that Little Monsters have anxiously awaited the release of LG6. Alas, the time has finally come. Lady Gaga is returning bigger than ever with a mega upbeat dance pop fusion album titled "Chromatica". Recent reviews of the music say it’s her most consistent album to date and that each track on the album competes with one another to be the hit single. It’s a collection of music that encourages dancing through the sadness with emotional power pop ballads, electronic melodies, and club dance beats. Her lead single “Stupid Love” was to me, pop perfection, so she’s bound to serve in the new era.</p></center>
 
-              <img src="Lady-Gaga-Stupid-Love.jpg" width="500" height="300">
-              <br>
-              <br>
-              <div>It has been four long years that Little Monsters have anxiously awaited the release of LG6. Alas, the time has finally come. Lady Gaga is returning bigger than ever with a mega upbeat dance pop fusion album titled "Chromatica". Recent reviews of the music say it’s her most consistent album to date and that each track on the album competes with one another to be the hit single. It’s a collection of music that encourages dancing through the sadness with emotional power pop ballads, electronic melodies, and club dance beats. Her lead single “Stupid Love” was to me, pop perfection, so she’s bound to serve in the new era.
-                <br>
-              </span>
-            </div>
+      <h2>Top Songs:</h2>
+        <div class="name">"Physical", "Don't Start Now", and "Future Nostalgia" - Dua Lipa</div>
+        <br>
+        <div class="photo2">
+        <img src="Screen Shot 2020-03-26 at 2.55.09 AM.png" width="800" height="300"></div>
+        <br>
+        <center><p>I firmly believe that Dua Lipa is the future of pop music. Every song that she has released leading up to her album which drops later this month is an absolute bop. Dua’s bright 80s influence dance beats are perfectly paired with her confident female empowerment lyrics. Her music is fun, colorful, and unique amongst many of the slower hip hop songs that are being released today. If the rest of her album is anything like her three lead singles, then she is destined to gain a spont amongst some of the greats. Her crown awaits her.</p></center>
 
-<h3>Hit Songs:</h3>
+        <h2>Top Artist:</h2>
+        <div class="name">Lizzo</div>
+        <br>
+        <div class="photo3">
+        <img src="1200_600_imago94574188h.horizontal.jpg" width="600" height="300"></div>
+        <br>
+        <center><p>Lizzo had quite a year with her music reaching new heights and new audiences all over the country. You might be surprised that I chose her to be the featured artist in the future of pop category, but I really feel as though Lizzo’s best is yet come. Not only does she have a crazy talented voice, but her flute playing is also extremely impressive. Her relentless positivity and uplifting songs make her a favorable artist to stan. I don’t know what’s in the works, but whatever it is, the world is not ready.</p></center>
+          <br>
 
-        <h4>"Physical", "Don't Start Now", and "Future Nostalgia" - Dua Lipa</h4>
-
-              <img src="Screen Shot 2020-03-26 at 2.55.09 AM.png" width="800" height="300">
-              <br>
-              <br>
-              <div>I firmly believe that Dua Lipa is the future of pop music. Every song that she has released leading up to her album which drops later this month is an absolute bop. Dua’s bright 80s influence dance beats are perfectly paired with her confident female empowerment lyrics. Her music is fun, colorful, and unique amongst many of the slower hip hop songs that are being released today. If the rest of her album is anything like the her three lead singles, then the album will be nothing short of pop perfection. Her crown awaits her.
-
-                <br>
-              </span>
-            </div>
-<h3>Top Artist:</h3>
-
-        <h4>Lizzo</h4>
-
-              <img src="1200_600_imago94574188h.horizontal.jpg" width="600" height="300">
-              <br>
-              <br>
-              <div>Lizzo had quite a year with her music reaching new heights and new audiences all over the country. You might be surprised that I chose her to be the featured artist in the future of pop category, but I really feel as though Lizzo’s best is yet come. Not only does she have a crazy talented voice, but her flute playing is also extremely impressive. Her relentless positivity and uplifting songs make her a favorable artist to stan. I don’t know what’s in the works, but whatever it is, the world is not ready.
-                <br>
-              </span>
-            </div>
+    </body>
+</html>
